feat(server): update server to handle new templating system
