# crates/schemas/src/task.rs
@@ -1,41 +1,18 @@
 //! Task-related schemas.
 
-/// A template written with Jinja2 syntax.
+/// A template.
+///
+/// Variables in templates are defined using `${variableName}` syntax.
 #[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
 #[cfg_attr(feature = "json_schema", derive(schemars::JsonSchema))]
 #[serde(rename_all = "camelCase", deny_unknown_fields)]
 pub struct Template(
     #[cfg_attr(
         feature = "json_schema",
-        schemars(example = "Classify this sentence: {{ input.sentence }}")
+        schemars(example = "Classify this sentence: ${sentence}")
     )]
     pub String,
 );
-
-/// Run an LLM.
-#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
-#[cfg_attr(feature = "json_schema", derive(schemars::JsonSchema))]
-#[serde(rename_all = "camelCase", deny_unknown_fields)]
-pub struct InvokeLLM {
-    /// The template to use.
-    pub template: Template,
-    /// The output schema.
-    ///
-    /// If unspecified the task will return an object with a single "output" string.
-    pub output_schema: Option<serde_json::Map<String, serde_json::Value>>,
-    /// The IDs of tools to make available to the LLM.
-    #[serde(default)]
-    pub available_tool_ids: Vec<String>,
-}
-
-/// A description of the action associated with a task.
-#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
-#[cfg_attr(feature = "json_schema", derive(schemars::JsonSchema))]
-#[serde(rename_all = "camelCase", deny_unknown_fields)]
-pub enum TaskAction {
-    /// Invoke an LLM.
-    InvokeLLM(InvokeLLM),
-}
 
 /// A task ID.
 #[derive(Debug, Copy, Clone, Hash, PartialEq, Eq, serde::Serialize, serde::Deserialize)]
@@ -55,8 +32,20 @@ pub struct Task {
     /// The name of the task.
     #[cfg_attr(feature = "json_schema", schemars(example = "Classify Email"))]
     pub name: String,
-    /// The action that the task performs.
-    pub action: TaskAction,
+    /// The template to use.
+    pub template: Template,
+    /// The output schema.
+    ///
+    /// If unspecified the task will return an object with a single "output" string.
+    pub output_schema: Option<serde_json::Map<String, serde_json::Value>>,
+    /// The input schema of a task.
+    ///
+    /// Each key in this object should be a variable name in `template`.
+    #[serde(default)]
+    pub input_schema: serde_json::Map<String, serde_json::Value>,
+    /// The IDs of tools to make available to the LLM.
+    #[serde(default)]
+    pub available_tool_ids: Vec<String>,
 }
 
 /// Minimal information describing a stored object.
